# undercover-agent-game

./: .env.template  .gitignore  README.md  config.yaml  pyproject.toml  server.py
docs/: Design.md
game/: main.py  metrics.py  websocket_server.py
game/agent_tools/: speech_tools.py  vote_tools.py
game/agents/: ai_agent.py  base.py  host_agent.py  human_agent.py
game/agents/tools/: vote_tools.py
game/api/routes/: games.py  health.py  threads.py
game/api/websocket/: handler.py
game/common/: config.py  constant.py  llm_client.py  schema.py  settings.py
game/core/: agent_factory.py  game_manager.py  rules.py  speech_strategy.py
game/graph/: build_graph.py  state.py
game/graph/nodes/: delay_node.py  master_node.py  speech_node.py  transition_node.py  vote_node.py
game/strategy/: strategy_core.py
game/strategy/builders/: context_builder.py  prompt_builder.py
game/strategy/utils/: logging_utils.py
game/tools/: llm.py
game/utils/: context_builder.py  logger.py  logging_utils.py  prompt_builder.py  serialization.py
tests/: test_ai_agent.py
ui-web/frontend/: package-lock.json
ui-web/frontend/public/locales/en/: translation.json
ui-web/frontend/public/locales/zh/: translation.json
ui-web/frontend/src/: App.css  App.js  LangGraphClient.js  WebSocketClient.js
ui-web/frontend/src/components/: GameEvents.js  HumanPlayerLobby.js  HumanPlayerView.js  RoleReveal.js  SpeechInput.js  VoteSelector.js
